Horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     align-self: start;
     width: auto;
     min-width: 300px;
+    max-width: 100%;
     padding: 1rem;
     font-family: 'Open Sans', sans-serif;
 }
